<resources>
    <string name="app_name">StoryProject</string>
    <string name="input_client_id_edit_text">Please Enter Client ID</string>
    <string name="input_client_name_edit_text">Please Enter Client Name</string>
    <string name="input_prd_name_edit_text">Please Enter Prd Name</string>
    <string name="input_prd_price_edit_text">Please Enter Prd Price</string>
    <string name="input_prd_qty_edit_text">Please Enter Prd Qty</string>

    <string name="total_text_view"></string>
    <string name="client_text_view"></string>

    <string name="total_input_billing_button">TOTAL INPUT BILLING</string>
    <string name="total_record_billing_button">TOTAL RECORD BILLING</string>
    <string name="billing_details_button">BILLING DETAILS</string>
    <string name="prev_billing_button">PREV BILLING</string>
    <string name="next_billing_button">NEXT BILLING</string>

    <string name="client_id_text_view">Client ID</string>
    <string name="client_name_text_view">Client Name</string>
    <string name="product_name_text_view">Product Name</string>
    <string name="product_price_text_view">Prouduct Price</string>
    <string name="product_qty_text_view">Product Qty</string>
    <string name="billing_update_button">BILLING UPDATE</string>
</resources>